infrastructure/03-apps/finance-scrapper/manifests/scraper-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-scrapper-scraper-worker
  namespace: finance-scrapper
spec:
  replicas: 0
  selector:
    matchLabels:
      app: finance-scrapper-scraper-worker
  template:
    metadata:
      labels:
        app: finance-scrapper-scraper-worker
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 29097
        runAsGroup: 29097
        fsGroup: 29097
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: scraper-worker
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 29097
            runAsGroup: 29097
          image: ghcr.io/ripitchip/finance-scrapper-scraper:sha-60655f3
          imagePullPolicy: IfNotPresent
          command: ["python"]
          args: ["-m", "app.worker"]
          resources:
            limits:
              cpu: "4"
              memory: 10Gi
            requests:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - name: shared-data
              mountPath: /data
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: finance-scrapper-data-pvc
