infrastructure/03-apps/finance-scrapper/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-scrapper
  namespace: finance-scrapper
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  rules:
    - host: advisor.foobarbaz.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: finance-scrapper-backend
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: finance-scrapper-backend
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: finance-scrapper-backend
                port:
                  number: 8000
          - path: /oidc
            pathType: Prefix
            backend:
              service:
                name: finance-scrapper-backend
                port:
                  number: 8000
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: finance-scrapper-backend
                port:
                  number: 8000
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: finance-scrapper-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-scrapper-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - advisor.foobarbaz.fr
      secretName: finance-scrapper-tls
